--- a/3dgame.html
+++ b/3dgame.html
@@ -18,6 +18,15 @@
       height: 100%;
       touch-action: none;
     }
+
+    #timer {
+position: absolute;
+left:10px;
+bottom:10px;
+color:#ccc;
+font: 52px sans-serif;
+} 
+
   </style>
   <script>
     function start() {
@@ -83,6 +92,7 @@ boosts.push(newBoost);
 
 // Place boosts here
 boostAt(xFn, zFn, 0.01);
+boostAt(xFn, zFn, 0.95);
 
 scene.registerAfterRender(function() {
 boosts.forEach(function(boost, i){
@@ -129,8 +139,11 @@ boost.rotation.y += 0.01
 //NEW CODE
         wallAt(xFn, zFn, 0.47,  -6.1, scene);
         wallAt(xFn, zFn, 0.47,  6.1, scene);
+        wallAt(xFn, zFn, 0.47,  0.1, scene);
 
 
+        var startTime;
+var timer = document.querySelector('#timer'); 
 
 
 
@@ -152,6 +165,8 @@ boost.rotation.y += 0.01
           var  right = BABYLON.Vector3.TransformCoordinates(forward, BABYLON.Matrix.RotationY(Math.PI / 2));
 
           if (keys.w) {
+          if(!startTime){ startTime = Date.now(); } 
+
             playerSphere.applyImpulse(forward, playerSphere.getAbsolutePosition());
           }
           if (keys.s) {
@@ -277,5 +292,8 @@ camera.alpha += (angle - camera.alpha) / 32;
 </head>
 <body onload="start()">
   <canvas id="renderCanvas"></canvas>
+
+<div id="timer">00:00</div> 
+
 </body>
 </html>
